2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::GdbServer): Remove reference to
	currentCTid.
	(GdbServer::rspFileIOreply): Use the general thread instead of the
	continue thread.
	(GdbServer::rspSetThread): Update intro comment.  Don't handle Hc.
	(GdbServer::rspCommand): Remove references to currentCTid.
	(GdbServer::rspRestart, GdbServer::rspRemoveMatchpoint)
	(GdbServer::rspInsertMatchpoint, GdbServer::targetSwReset): Use
	the general thread instead of the continue thread.
	* src/GdbServer.h (GdbServer) <currentCTid>: Remove field.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspClientRequest): Remove handling
	of 'c' and 'C' packets.
	(GdbServer::rspContinue): Remove all overloads.
	* src/GdbServer.h (GdbServer) <rspContinue>: Remove all overloads.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspClientRequest): Remove handling
	of 's' and 'S'.
	(GdbServer::rspStep()): Delete.
	(GdbServer::rspStep(bool,uint32_t,TargetSignal): Delete.
	(GdbServer::rspVCont): Remove handling of 's' actions.
	(GdbServer::extractVContAction): Remove handling of 's' and 'S'
	actions.
	(GdbServer::doStep): Delete.
	* src/GdbServer.h (GdbServer) <rspStep, doStep>: Remove
	declarations.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspQuery): Remove handling of the
	qTStatus packet.
	(GdbServer::rspSet): Remove handling of the 'QTStart', 'QTStop',
	'QTinit', 'QTDP', 'QFrame' and 'QTro' packets.
	* src/TargetControl.h (TargetControl) <initTrace, startTrace,
	stopTrace>: Remove declarations.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::initTrace)
	(TargetControlHardware::startTrace)
	(TargetControlHardware::stopTrace): Delete.
	* src/TargetControlHardware.h (TargetControlHardware) <initTrace,
	startTrace, stopTrace>: Remove declarations.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspRemoveMatchpoint)